--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <div class="container">
-<div class="calculator">
-    <h1>Javascript<br><span>Age Calculator</span></h1>
-    <div class="input-box">
-        <input type="date" id="date">
-        <button>Calculator</button>
+        <div class="calculator">
+            <h1>Javascript<br><span>Age Calculator</span></h1>
+            <div class="input-box">
+                <input type="date" id="date">
+                <button>Calculator</button>
+            </div>
+            <p id="result"></p>
+        </div>
     </div>
-</div>
-    </div>
+    <script src="script.js"></script>
 </body>
 </html>
